# BasicNeuralNetwork

./: .gitignore  CMakeLists.txt
Python/: batch_invert.py  generate_training_images.py
include/: NeuralNetwork.hpp
models/: model.model
src/: NeuralNetwork.cpp  main.cpp
